# calculator

./: .gitignore  AGENTS.md  CLAUDE.md  PRODUCT_STATE.md  compound-engineering.local.md  memory.md  pyproject.toml
.claude/: ralph-loop.local.md  ralph-progress.md  ralph-tasks.json  work-briefing-20260226_001634.md  work-briefing-20260226_231523.md
docs/brainstorms/: 2026-02-26-calculator-website-brainstorm.md
docs/plans/: 2026-02-26-calculator-mvp.md
phases/01-discovery/: GATE-CHECK.md  competitive-analysis.md  customer-research.md  vision.md
phases/02-definition/: GATE-CHECK.md  prd.md  success-metrics.md  user-stories.md
phases/03-architecture/: GATE-CHECK.md  api-design.md  data-model.md  roadmap.md  system-design.md  tech-stack.md
phases/04-build/: GATE-CHECK.md  implementation-plan.md
phases/05-launch/: GATE-CHECK.md  distribution.md  launch-checklist.md  marketing-plan.md
phases/06-growth/: GATE-CHECK.md  feedback-analysis.md  iteration-plan.md  sales-strategy.md
src/: index.html  script.js  style.css
